--- a/n_timer/storage_timer.html
+++ b/n_timer/storage_timer.html
@@ -21,11 +21,10 @@
 
     <!-- 1つ目のタイマー -->
     <div class="timer">
-        <h3>タイマー 1 (開始時刻との差で計測)</h3>
-        <div id="timer1">00:00:00</div>
+        <h3>タイマー
+        <div id="timer1">00:00:00</div></h3>
     </div>
 
-    <!-- 現在時刻と開始時刻の表示 -->
     <div>
         <h3>現在時刻: <span id="currentTime">00:00:00</span></h3>
         <h3>開始時刻: <span id="startTimeDisplay">未設定</span></h3>
