--- a/v_split_csv/split_csv2.html
+++ b/v_split_csv/split_csv2.html
@@ -46,5 +46,101 @@
             <input type="file" id="csvFile" accept=".csv" required>
             <br><br>
             <label for="lines_per_file">1ファイルあたりの行数:</label>
-   
+            <input type="text" id="linesPerFile" required placeholder="例: 100, 200">
+            <br><br>
+            <button type="submit">アップロード</button>
+        </form>
+
+        <hr>
+
+        <h2>処理結果</h2>
+        <a id="downloadLink" style="display:none;" href="#">ZIPファイルをダウンロード</a>
+    </div>
+
+    <aside id="unique-items">
+        <h2>商品ごとの例数</h2>
+        <ul id="itemList"></ul>
+    </aside>
+
+    <script>
+        function decodeShiftJIS(arrayBuffer) {
+            const decoder = new TextDecoder("shift-jis");
+            return decoder.decode(arrayBuffer);
+        }
+
+        document.getElementById('uploadForm').addEventListener('submit', function (event) {
+            event.preventDefault();
+
+            const fileInput = document.getElementById('csvFile');
+            const linesPerFileInput = document.getElementById('linesPerFile').value;
+
+            if (fileInput.files.length === 0) {
+                alert("ファイルを選択してください");
+                return;
+            }
+
+            const file = fileInput.files[0];
+
+            const reader = new FileReader();
+            reader.onload = function (e) {
+                const arrayBuffer = e.target.result;
+                const content = decodeShiftJIS(arrayBuffer);
+
+                Papa.parse(content, {
+                    header: true,
+                    skipEmptyLines: true,
+                    complete: function (results) {
+                        const data = results.data;
+
+                        // 商品名ごとの例数をカウント
+                        const counts = data.reduce((acc, row) => {
+                            const productName = row["商品名"];
+                            if (productName) {
+                                acc[productName] = (acc[productName] || 0) + 1;
+                            }
+                            return acc;
+                        }, {});
+
+                        // サイドバーに表示
+                        const itemList = document.getElementById("itemList");
+                        itemList.innerHTML = ""; // 初期化
+                        Object.entries(counts).forEach(([productName, count]) => {
+                            const listItem = document.createElement("li");
+                            listItem.textContent = `${productName}: ${count} 件`;
+                            itemList.appendChild(listItem);
+                        });
+
+                        // CSV分割処理（ここでは従来通り）
+                        const linesPerFile = linesPerFileInput.split(',').map(Number);
+                        let startIndex = 0;
+                        const outputFiles = [];
+                        linesPerFile.forEach((lines, index) => {
+                            const chunk = data.slice(startIndex, startIndex + lines);
+                            startIndex += lines;
+                            const csvContent = Papa.unparse(chunk);
+                            outputFiles.push(csvContent);
+                        });
+
+                        const zip = new JSZip();
+                        outputFiles.forEach((content, index) => {
+                            zip.file(`output_${index + 1}.csv`, content);
+                        });
+
+                        zip.generateAsync({ type: 'blob' }).then(function (content) {
+                            const link = document.getElementById('downloadLink');
+                            const url = URL.createObjectURL(content);
+                            link.href = url;
+                            link.style.display = 'block';
+                            link.download = 'split_files.zip';
+                        });
+                    }
+                });
+            };
+            reader.readAsArrayBuffer(file);
+        });
+    </script>
+</body>
+
+</html>
+
 
