--- a/v_split_csv/split_csv2.html
+++ b/v_split_csv/split_csv2.html
@@ -28,7 +28,7 @@
 
     <!-- 賞品毎の例数テーブル（右側に表示） -->
     <h2>賞品毎の例数</h2>
-    <table id="itemTable" border="1" style="width:40%; float:right; display:none;">
+    <table id="itemTable" border="1" style="width:90%; margin-left:5%; margin-right:5%; display:none;">
         <thead>
             <tr>
                 <th>例数</th>
@@ -180,6 +180,7 @@
 </body>
 
 </html>
+
 
 
 
