--- a/w_player/index8.html
+++ b/w_player/index8.html
@@ -186,7 +186,7 @@
             const timestamp = new Date().toLocaleTimeString();
             const listItem = document.createElement("li");
             if (targetArea === "field") {
-                listItem.textContent = `${timestamp}: ${playerName} が 出場しました、控えエリアに移動しました。`;
+                listItem.textContent = `${timestamp}: ${playerName} が 出場しました。`;
             } else {
                 listItem.textContent = `${timestamp}: ${playerName} が 退場しました。`;
             }
