--- a/w_player/index8.html
+++ b/w_player/index8.html
@@ -45,8 +45,9 @@
             padding: 5px;
             margin: 5px;
             cursor: grab;
-            width: 120px;
+            width: 120px;　/* アイコン幅調整 */
             text-align: center;
+            font-size: 14px; /* 文字のサイズ調整 */
         }
         .player.dragging {
             opacity: 0.7;
