--- a/w_player/index8.html
+++ b/w_player/index8.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ドラッグ＆ドロップエリア</title>
+    <title>選手交代記録アプリ</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -79,10 +79,10 @@
 <body>
     <div class="container">
         <div class="area" id="bench">
-            <div class="area-title">控えエリア</div>
+            <div class="area-title">控え</div>
         </div>
         <div class="area" id="field">
-            <div class="area-title">出場エリア</div>
+            <div class="area-title">出場</div>
         </div>
     </div>
     <div class="input-container">
